; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_mp3enc.c_mp3_write_header.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_mp3enc.c_mp3_write_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.AVFormatContext = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i64, i32 }

@ID3v2_DEFAULT_MAGIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.AVFormatContext*)* @mp3_write_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp3_write_header(%struct.AVFormatContext* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.AVFormatContext*, align 8
  %4 = alloca %struct.TYPE_2__*, align 8
  %5 = alloca i32, align 4
  store %struct.AVFormatContext* %0, %struct.AVFormatContext** %3, align 8
  %6 = load %struct.AVFormatContext*, %struct.AVFormatContext** %3, align 8
  %7 = getelementptr inbounds %struct.AVFormatContext, %struct.AVFormatContext* %6, i32 0, i32 2
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  store %struct.TYPE_2__* %8, %struct.TYPE_2__** %4, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %33

13:                                               ; preds = %1
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load %struct.AVFormatContext*, %struct.AVFormatContext** %3, align 8
  %17 = getelementptr inbounds %struct.AVFormatContext, %struct.AVFormatContext* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = load i32, i32* @ID3v2_DEFAULT_MAGIC, align 4
  %23 = call i32 @ff_id3v2_start(i32* %15, i32 %18, i64 %21, i32 %22)
  %24 = load %struct.AVFormatContext*, %struct.AVFormatContext** %3, align 8
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = call i32 @ff_id3v2_write_metadata(%struct.AVFormatContext* %24, i32* %26)
  store i32 %27, i32* %5, align 4
  %28 = load i32, i32* %5, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %13
  %31 = load i32, i32* %5, align 4
  store i32 %31, i32* %2, align 4
  br label %57

32:                                               ; preds = %13
  br label %33

33:                                               ; preds = %32, %1
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 2
  %36 = load i32, i32* %35, align 8
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %56, label %38

38:                                               ; preds = %33
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 1
  %41 = load i64, i64* %40, align 8
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %53

43:                                               ; preds = %38
  %44 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %45 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %44, i32 0, i32 0
  %46 = load %struct.AVFormatContext*, %struct.AVFormatContext** %3, align 8
  %47 = getelementptr inbounds %struct.AVFormatContext, %struct.AVFormatContext* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = load %struct.AVFormatContext*, %struct.AVFormatContext** %3, align 8
  %50 = getelementptr inbounds %struct.AVFormatContext, %struct.AVFormatContext* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = call i32 @ff_id3v2_finish(i32* %45, i32 %48, i32 %51)
  br label %53

53:                                               ; preds = %43, %38
  %54 = load %struct.AVFormatContext*, %struct.AVFormatContext** %3, align 8
  %55 = call i32 @mp3_write_xing(%struct.AVFormatContext* %54)
  br label %56

56:                                               ; preds = %53, %33
  store i32 0, i32* %2, align 4
  br label %57

57:                                               ; preds = %56, %30
  %58 = load i32, i32* %2, align 4
  ret i32 %58
}

declare dso_local i32 @ff_id3v2_start(i32*, i32, i64, i32) #1

declare dso_local i32 @ff_id3v2_write_metadata(%struct.AVFormatContext*, i32*) #1

declare dso_local i32 @ff_id3v2_finish(i32*, i32, i32) #1

declare dso_local i32 @mp3_write_xing(%struct.AVFormatContext*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
